# AI-Agents

./: .env.example  .gitignore  AGENT_ANALYSIS_DETAILED.md  AGENT_IMPROVEMENT_REPORT.md  AGENT_STRUCTURE.md  BUG_FIXES_SUMMARY.md  COMPREHENSIVE_WORKFLOW_DIAGRAM.md  CrewAI.System Architecture-v.1.0.drawio  CrewAI.System Architecture-v.1.1.drawio  HOW_TO_RUN.md  IMPLEMENTATION_FEATURES_GUIDE.md  LOGS_AND_METRICS_GUIDE.md  PROJECT_DELIVERABLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REPORT_PART_1_CrewAI_DELIVERABLES.md  REPORT_PART_2_ADK_DELIVERABLES.md  REQUIREMENTS_COMPLIANCE.md  STRUCTURE_VERIFICATION.md  TIME_SERIES_DATA.md  WORKFLOW_COMPLETE.md  adk_web.py  agency.yaml  demonstrate_features.py  financial_agent.py  main.py  main_enhanced.py  main_workflow.py  playground.py  requirements.txt  setup_enhanced.py  view_logs.py  visualize_timeline.py
agents/: __init__.py  agent.py  root_agent.yaml
config/: agent_registry.yaml  global_config.yaml  logging.yaml  memory_config.yaml  validator_rules.yaml  workflow_config.yaml
crewai_multi_agent/: README.md  pyproject.toml
crewai_multi_agent/knowledge/: user_preference.txt
crewai_multi_agent/src/: amazon_campaign_final_report.md  campaign_validation_report.md
crewai_multi_agent/src/crewai_multi_agent/: crew.py  main.py  test_simple.py
crewai_multi_agent/src/crewai_multi_agent/config/: agents.yaml  tasks.yaml
crewai_multi_agent/src/crewai_multi_agent/tools/: custom_tool.py
shared/: __init__.py  async_logger.py  context_manager.py  enhanced_memory.py  logger.py  (+6 more)
(+50 files in other folders)
