[project]
name = "crewai_multi_agent"
version = "0.1.0"
description = "crewai-multi-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
crewai_multi_agent = "crewai_multi_agent.main:run"
run_crew = "crewai_multi_agent.main:run"
train = "crewai_multi_agent.main:train"
replay = "crewai_multi_agent.main:replay"
test = "crewai_multi_agent.main:test"
run_with_trigger = "crewai_multi_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
